# Shrut

./: Cargo.toml  readme.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: connection_manager.rs  lib.rs  main.rs  webrtc_manager.rs
client/src/components/: atoms.rs  organisms.rs
client/src/components/atoms/: animation.rs  avatar.rs  dark_mode.rs  global_style.rs  link.rs  logo.rs  messages.rs  other_peers_state.rs  overlay.rs  this_peer_state.rs
client/src/components/organisms/: center.rs  footer.rs  header.rs
server/: Cargo.toml
server/src/: connection_manager.rs  entities.rs  lib.rs  main.rs
server/src/entities/: messages.rs  peer.rs  room.rs  rooms.rs
