[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
gloo = { version = "0.8.1", features = ["futures"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
stylist = { version = "0.12.1", features = ["yew_integration"] }
tokio = { version = "1.29.1", features = ["sync"] }
uuid = { version = "1.4.1", features = ["serde"] }
wasm-bindgen = { version = "0.2.87", features = ["serde", "serde-serialize"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
web-sys = { version = "0.3.64", features = [
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "RtcPeerConnection",
    "RtcSignalingState", 
    "RtcSdpType",
    "RtcSessionDescriptionInit", 
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcConfiguration",
    "RtcDataChannelInit",
    "RtcIceConnectionState",
    "RtcIceCandidateInit",
    "RtcIceGatheringState",
] }
js-sys = "0.3.64"  
wasm-bindgen-futures = { version = "0.4.37", features = ["futures-core"] }
yew-hooks = "0.2.0"
rmp-serde = "1.1.1" 
