[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread","macros"] } 
tower = "0.4.13"
tower-http = { version = "0.4.2", features = ["fs"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
random_name_generator = "0.3.5"
user-agent-parser = "0.3.4"
futures-util = { version = "0.3.28", features = ["sink"] } 
 